Improved Film constructor for multiple genres